<resources>
    <string name="app_name">Yahoo finance</string>
    <string name="action_run">Score</string>
    <string name="action_sym_st">Symbol stock</string>
    <string name="action_cur_pr">Current price</string>
    <string name="text_name">Name:</string>
    <string name="text_OK">OK</string>
    <string name="have_stock">You have stock:</string>
    <string name="have_money">You have money: 1000$</string>
    <string name="have_total_money">Total: 1000$</string>
    <string name="sell_buy_price">you buying stock yahoo price $100</string>
    <string name="text_pcs">  pcs</string>
    <string name="action_about">About</string>

    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
