<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.saperov.myachart.MainActivity">
    <item
        android:id="@+id/action_run"
        android:orderInCategory="100"
        android:title="@string/action_run"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sym_st"
        android:orderInCategory="100"
        android:title="@string/action_sym_st"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cur_pr"
        android:orderInCategory="100"
        android:title="@string/action_cur_pr"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
