<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSellBuyPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell_buy_price"
        >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/etCnt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:inputType="number"

            >
            <requestFocus>
            </requestFocus>
        </EditText>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pcs"
            >
        </TextView>

        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_OK"
        android:id="@+id/btnSellBuyOK"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:onClick="onButtonOKClick"
        >
    </Button>

    </LinearLayout>